# Real-recompile-

./: .gitignore  CMakeLists.txt  README.md  realrecompile_config.toml
.github/workflows/: android.yml  ci.yml
android/: AndroidManifest.xml
android/java/com/realrecompile/app/: LauncherActivity.java
android/res/drawable/: accent_line.xml  bg_gradient.xml  btn_accent.xml  btn_play.xml  btn_play_disabled.xml  btn_secondary.xml  card_bg.xml
android/res/layout/: activity_launcher.xml
android/res/values/: strings.xml  styles.xml
artifacts/analysis/: recompiler.toml
artifacts/reports/: runner_smoke_settings.ini  unimplemented.txt
scripts/: analyse_xex.sh  build.sh  build_generated_native.sh  build_generated_wine.sh  build_runtime_native.sh  build_runtime_wine.sh  build_xenon_tools.sh  codegen.sh  extract_default_xex.sh  find_unimplemented.sh  fix_generated_labels.py  fix_generated_labels.sh  full_pipeline_native.sh  full_pipeline_wine.sh  patch_sdk_android.sh  recompile_xex.sh  setup_codespace.sh  setup_rexglue_sdk.sh  smoke_runner.sh
src/app/: main.cpp  main_android.cpp
src/platform/: gpu_wrapper.cpp  gpu_wrapper.h  input_wrapper.cpp  input_wrapper.h
src/runner/: main.cpp  settings.cpp  settings.h
src/runtime/: compiler_compat.h  ppc_unimplemented.cpp  ppc_unimplemented.h
src/smoke/: main.cpp
